# cargs

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: README.md  config.js  index.html  installing.md  quickstart.md
src/: Makefile.am  cargs.c  cargs.h  cargs_arr.c  cargs_arr.h  cargs_parse.c  cargs_parse.h
tests/: .gitignore  Makefile.am  check_argtypes.c  check_arr.c  check_info.c  check_init  check_init.c  check_printinfo.c
tests/tests/: Makefile.am
